card style change(suitable for the color scheme used) + Suggestar logo color change for visibility + minor fixes

--- a/doks-theme/_sass/_custom.scss
+++ b/doks-theme/_sass/_custom.scss
@@ -30,6 +30,34 @@
     border-color: #ffffff;
 }
 
+.card {
+    display: block;
+    background: #fff;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 2px 4px 9px 1px rgba(0,0,0,0.05), 0 1px 1px rgba(0,0,0,0.04);
+    transition: .2s;
+    &:hover {
+        -webkit-transform: translateY(-2px) scale(1.01);
+        -ms-transform: translateY(-2px) scale(1.01);
+        transform: translateY(-2px) scale(1.01);
+        box-shadow: 2px 4px 9px 1px rgba(0,0,0,0.07), 0 1px 1px rgba(0,0,0,0.05);
+        
+    }
+}
+
+.border {
+    border: 1px solid rgba(0,0,0,0.07);
+}
+
+.gap {
+    margin-bottom: 2em;
+}
+
+.text-white {
+    color: white !important;
+}
+
 .btn-grad {
     background: linear-gradient(to right, #F45C43 0%, #EB3349 100%);     
 }
@@ -39,16 +67,30 @@
 }
 
 .books {
-    padding: 0rem 0;
+    padding: 4rem 0;
+    background-color: lighten($brand-color, 30%);
 }
+
+.clients {
+    padding: 4rem 0;
+    background-color: white;
+}
+
+
+
 .section-header {
     border: none;
     text-align: center;
     margin-bottom: 2em;
 }
 
+.clients-card {
+/*     position: relative; */
+}
+
 .card-description {
     padding: 1em;
+
 }
 
 .book-title {
@@ -60,14 +102,21 @@
 .client-logo {
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center center;
-    height: 150px;
+    background-position: left;
+    height: 60px;
     width: 150px;
-    border-radius: 50%;
-    border: 3px solid rgba(158, 164, 171, 0.2);
+/*     border-radius: 50%;
+    border: 3px solid rgba(158, 164, 171, 0.2); */
+}
+.client-footer {
+/*     position: absolute;
+    bottom: 0; */
+    h5, h6 {
+        margin: 0;
+    }
 }
 .logo-holder {
     width: 150px;
-    margin: 0 auto;
-    margin-top: 1.5em;
+/*     margin: 0 auto;
+    margin-top: 1.5em; */
 }
