--- a/doks-theme/assets/css/style.scss
+++ b/doks-theme/assets/css/style.scss
@@ -3,6 +3,8 @@
 # only Main files contain this front matter, not partials.
 ---
 
+$brand-color: #1641cc;
+
 /**
  * Style (style.scss)
  */
